Bug 78565 - Placeholders describing command line options should not have spaces
Summary: Placeholders describing command line options should not have spaces
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: tools (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Manish
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords: love
Depends on:
Blocks:
 
Reported: 2014-05-11 22:14 UTC by Alexander Potashev
Modified: 2015-07-02 06:11 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Alexander Potashev 2014-05-11 22:14:36 UTC
Placeholders describing command line options should not have spaces, but I see one here:

    aspotashev@meth ~/soft-git/pulseaudio $ pacmd --help
    [...]
    pacmd set-log-level NUMERIC LEVEL
    [...]

"NUMERIC LEVEL" stands for a single argument here. But since it has a space in between, some users might think that these are two arguments. I suggest changing this to "NUMERIC-LEVEL", similarly to "CARD-NAME" which is already used.

Please find the corresponding source code in src/utils/pacmd.c, at line 78.
Comment 1 Manish 2015-06-26 04:54:28 UTC
http://lists.freedesktop.org/archives/pulseaudio-discuss/2015-June/024061.html



Signed-off-by: Manish Sogi <manish.sogi at samsung.com>
---
 src/utils/pacmd.c |    2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)

diff --git a/src/utils/pacmd.c b/src/utils/pacmd.c
index ef3b84b..547ebe1 100644
--- a/src/utils/pacmd.c
+++ b/src/utils/pacmd.c
@@ -73,7 +73,7 @@ static void help(const char *argv0) {
     printf("%s %s %s\n", argv0, "set-(sink|source)-port", _("NAME|#N PORT"));
     printf("%s %s %s\n", argv0, "set-port-latency-offset", _("CARD-NAME|CARD-#N PORT OFFSET"));
     printf("%s %s %s\n", argv0, "set-log-target", _("TARGET"));
-    printf("%s %s %s\n", argv0, "set-log-level", _("NUMERIC LEVEL"));
+    printf("%s %s %s\n", argv0, "set-log-level", _("NUMERIC-LEVEL"));
     printf("%s %s %s\n", argv0, "set-log-meta", _("1|0"));
     printf("%s %s %s\n", argv0, "set-log-time", _("1|0"));
     printf("%s %s %s\n", argv0, "set-log-backtrace", _("FRAMES"));
-- 
1.7.9.5


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.